# depura

./: Cargo.toml  Changelog.md  LICENSE-MIT  README.md  check.sh
.cargo/: config.toml
.github/workflows/: check.yml  nostd.yml  safety.yml
examples/: multi-logger.rs  panic.rs  single-logger.rs
src/: error.rs  lib.rs
src/logger/: mod.rs  multi.rs  single.rs
src/timer/: mod.rs  scope.rs  timeit.rs
