[package]
name = "depura"
description = "simple logging, benchmarking, debugging"
version = "0.2.0"
edition = "2021"
rust-version = "1.72.0" # sync with readme, check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/depura"
documentation = "https://docs.rs/depura"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE-*",
]
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = []
publish = true

[features]
default = ["std"]

# environment features
std = [ # features that depend on the standard library
	"alloc",
	"log/std",
	"instant",
	"simplelog",
	"time/local-offset",
	"time/formatting",
	"human-repr"
]
alloc = [] # features that depend on allocation (unused)
no-std = [] # features incompatible with "std" (unused)

# safety features
safe = [] # forbid unsafe at the crate level
safest = ["safe"] # forbid unsafe recursively (unused)
unsafe = [] # enable unsafe at the crate lavel (unused)
unsafest = ["unsafe"] # enable unsafe recursively (unused)

# nightly features
nightly = [] # used only for enhanced documentation
nightly_docs = ["nightly", "std"] # features for docs.rs


[dependencies]
log = "0.4"
time = { version = "0.3.27", default-features = false }

#* optional *#

human-repr = { version = "1.1.0", optional = true }

[dependencies.instant]
version = "0.1.12"
optional = true
features = [ "wasm-bindgen", "inaccurate" ]

[dependencies.simplelog]
version = "0.12.1"
optional = true
default-features = false
features = ["local-offset"]

[dev-dependencies]


[package.metadata.docs.rs]
no-default-features = true
features = ["nightly_docs"]

[badges]
maintenance = { status = "experimental" }
