[package]
name = "depura"
description = "simple logging, benchmarking, debugging"
version = "0.2.0"
edition = "2021"
rust-version = "1.72.0" # sync with readme, check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/depura"
documentation = "https://docs.rs/depura"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE-*",
]
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = []
publish = true

[features]
default = ["std"]

# environment features
# (not enabling "std" declares the library as "no_std")
std = [ # features that depend on the standard library
	"alloc",
	"devela/std",
	"log/std",
	"instant",
	"simplelog",
	"time/local-offset",
	"time/formatting",
	"human-repr"
]
alloc = ["devela/alloc"] # features that depend on allocation
no_std = ["devela/no_std"] # features incompatible with "std"

# safety features
safe = [] # forbid unsafe at the crate level
safest = ["safe", "devela/safest"] # forbid unsafe recursively
unsafe = [] # enable unsafe at the crate lavel (unused)
unsafest = ["unsafe", "devela/unsafest"] # enable unsafe recursively

# nightly features
nightly = ["devela/nightly"] # used only for enhanced documentation
nightly_docs = [ # features for docs.rs
	"nightly",
	"std",
	"devela/nightly_docs"
]


[dependencies]
devela = { version = "0.8.0", default-features = false }
log = "0.4"
time = { version = "0.3.27", default-features = false }

#* optional dependencies *#

human-repr = { version = "1.1.0", optional = true }

[dependencies.instant]
optional = true
version = "0.1.12"
default-features = false
features = [ "wasm-bindgen", "inaccurate" ]

[dependencies.simplelog]
optional = true
version = "0.12.1"
default-features = false
features = ["local-offset"]

[dev-dependencies]


[package.metadata.docs.rs]
no-default-features = true
features = ["nightly_docs"]

[badges]
maintenance = { status = "experimental" }
