[package]
name = "depura"
description = "Logging, benchmarking and debugging."
version = "0.3.0"
edition = "2021"
rust-version = "1.72.0" # sync with readme, check.sh & .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/depura"
documentation = "https://docs.rs/depura"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE-*",
]
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = []
publish = true

# ------------------------------------------------------------------------------

[features]

#* capability features *#
default = []
full = [] # enables optional capabilities in this crate (unused)

#* environment features *#
std = [ # disables `no_std` compatibility and enables `std` functionality
	"alloc",
	"devela/std", "log/std",
	"instant", "simplelog", "human-repr",
	"time/local-offset", "time/formatting",
]
alloc = ["devela/alloc"] # enables `alloc` features
no_std = ["devela/no_std"] # enables features incompatible with "std"

#* safety features *#
unsafest = ["unsafe", "devela/unsafest"] # enables unsafe recursively
unsafe = [] # enables unsafe features in this crate (unused)
safe = [] # forbids unsafe in this crate
safest = ["safe", "devela/safest"] # forbid unsafe recursively

#* nightly features *#
nightly = ["devela/nightly"] # enables nightly features
nightly_docs = [ # enables features for docs.rs
	"nightly", "full", "std", "unsafe",
	"devela/nightly_docs"
]

# ------------------------------------------------------------------------------

[dependencies]
devela = "0.9.0"
log = "0.4"
time = { version = "0.3.28", default-features = false }

#* optional dependencies *#
human-repr = { version = "1.1.0", optional = true }
[dependencies.instant]
optional = true
version = "0.1.12"
default-features = false
features = [ "wasm-bindgen", "inaccurate" ]
[dependencies.simplelog]
optional = true
version = "0.12.1"
default-features = false
features = ["local-offset"]

# ------------------------------------------------------------------------------

[package.metadata.docs.rs]
no-default-features = true
features = ["nightly_docs"]

[badges]
maintenance = { status = "experimental" }

# ------------------------------------------------------------------------------

[[example]]
name = "single-logger"
required-features = ["std"]
[[example]]
name = "multi-logger"
required-features = ["std"]
